; ModuleID = '/home/carl/AnghaBench/h2o/lib/extr_http1.c_get_ptls.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/extr_http1.c_get_ptls.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_h2o_http1_conn_t = type { i32* }

@.str = private unnamed_addr constant [30 x i8] c"it never becomes NULL, right?\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @get_ptls to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_ptls(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.st_h2o_http1_conn_t*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = bitcast i32* %4 to i8*
  %6 = bitcast i8* %5 to %struct.st_h2o_http1_conn_t*
  store %struct.st_h2o_http1_conn_t* %6, %struct.st_h2o_http1_conn_t** %3, align 8
  %7 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %3, align 8
  %8 = getelementptr inbounds %struct.st_h2o_http1_conn_t, %struct.st_h2o_http1_conn_t* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  br label %12

12:                                               ; preds = %11, %1
  %13 = phi i1 [ false, %1 ], [ true, %11 ]
  %14 = zext i1 %13 to i32
  %15 = call i32 @assert(i32 %14)
  %16 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %3, align 8
  %17 = getelementptr inbounds %struct.st_h2o_http1_conn_t, %struct.st_h2o_http1_conn_t* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  %19 = call i32* @h2o_socket_get_ptls(i32* %18)
  ret i32* %19
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32* @h2o_socket_get_ptls(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
